--- a/config.default.toml
+++ b/config.default.toml
@@ -1,3 +1,7 @@
 [testAction]
 key = "j"
 modifiers = [ "control", "shift" ]
+
+[testAction2]
+key = "k"
+modifiers = [ "control", "shift", "super" ]
