Added toggleFullscreen command.
- Minor cleanup in config.nim

--- a/config.default.toml
+++ b/config.default.toml
@@ -2,6 +2,10 @@
 key = "j"
 modifiers = [ "control" ]
 
+[toggleFullscreen]
+key = "f"
+modifiers = [ "super" ]
+
 [destroySelectedWindow]
 key = "q"
 modifiers = [ "super", "shift" ]
