Only one window will have a selection border.

--- a/config.default.toml
+++ b/config.default.toml
@@ -1,6 +1,11 @@
 # Start external programs
 
 [[startProcess]]
+command = "pkill nimdow"
+keys = [ "Delete" ]
+modifiers = [ "control", "alt" ]
+
+[[startProcess]]
 command = "$BROWSER"
 keys = [ "i" ]
 modifiers = [ "super" ]
