Added keybindings to move windows between monitors.

--- a/config.default.toml
+++ b/config.default.toml
@@ -61,3 +61,12 @@ modifiers = [ "super" ]
   [controls.focusNextMonitor]
   keys = [ "period" ]
   modifiers = [ "super" ]
+
+  [controls.moveWindowToPreviousMonitor]
+  keys = [ "comma" ]
+  modifiers = [ "super", "shift" ]
+
+  [controls.moveWindowToNextMonitor]
+  keys = [ "period" ]
+  modifiers = [ "super", "shift" ]
+
