Added keybindings to change the number of master windows.

--- a/config.default.toml
+++ b/config.default.toml
@@ -70,3 +70,11 @@ modifiers = [ "super" ]
   keys = [ "period" ]
   modifiers = [ "super", "shift" ]
 
+  [controls.increaseMasterCount]
+  keys = [ "z" ]
+  modifiers = [ "super" ]
+
+  [controls.decreaseMasterCount]
+  keys = [ "x" ]
+  modifiers = [ "super" ]
+
