--- a/config.default.toml
+++ b/config.default.toml
@@ -20,6 +20,9 @@ command = "st"
 keys = [ "Return" ]
 modifiers = [ "super" ]
 
+[settings]
+  gapSize = 4
+
 # Window manager controls
 [controls]
   [controls.focusPrevious]
