Added general cofiguration settings (#38)

--- a/config.default.toml
+++ b/config.default.toml
@@ -20,6 +20,12 @@ command = "st"
 keys = [ "Return" ]
 modifiers = [ "super" ]
 
+[settings]
+  gapSize = 12
+  borderWidth = 1
+  borderColorFocused = "#519f50"
+  borderColorUnfocused = "#1c1b19"
+
 # Window manager controls
 [controls]
   [controls.focusPrevious]
