Implemented app autostarting (#42)
* Implemented app autostarting

--- a/config.default.toml
+++ b/config.default.toml
@@ -20,6 +20,12 @@ command = "st"
 keys = [ "Return" ]
 modifiers = [ "super" ]
 
+[autostart]
+exec = [
+  #"firefox",
+  #"st",
+]
+
 [settings]
   gapSize = 12
   borderWidth = 1
