Windows can now be moved and resized.
- Fixed bug when moving windows between monitors
- Added keybinding to toggle a window's floating state.

--- a/config.default.toml
+++ b/config.default.toml
@@ -90,3 +90,7 @@ exec = [
   keys = [ "x" ]
   modifiers = [ "super" ]
 
+  [controls.toggleFloating]
+  keys = [ "space" ]
+  modifiers = [ "super" ]
+
