--- a/config.default.toml
+++ b/config.default.toml
@@ -76,6 +76,10 @@ exec = [
   keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
   modifiers = [ "super" ]
 
+  [controls.goToPreviousTag]
+  keys = [ "w" ]
+  modifiers = [ "super" ]
+
   [controls.focusPreviousMonitor]
   keys = [ "comma" ]
   modifiers = [ "super" ]
