--- a/config.default.toml
+++ b/config.default.toml
@@ -86,6 +86,10 @@ exec = [
   keys = [ "w" ]
   modifiers = [ "super" ]
 
+  [controls.toggleTag]
+  keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
+  modifiers = [ "super", "control" ]
+
   [controls.focusPreviousMonitor]
   keys = [ "comma" ]
   modifiers = [ "super" ]
