--- a/config.default.toml
+++ b/config.default.toml
@@ -86,9 +86,13 @@ exec = [
   keys = [ "w" ]
   modifiers = [ "super" ]
 
-  [controls.toggleTag]
+  [controls.toggleTagView]
   keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
   modifiers = [ "super", "control" ]
+
+  [controls.toggleWindowTag]
+  keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
+  modifiers = [ "super", "shift", "control" ]
 
   [controls.focusPreviousMonitor]
   keys = [ "comma" ]
