--- a/config.default.toml
+++ b/config.default.toml
@@ -31,8 +31,9 @@ exec = [
   # Window settings
   gapSize = 12
   borderWidth = 1
-  borderColorFocused = "#50fa7b"
   borderColorUnfocused = "#282a36"
+  borderColorFocused = "#50fa7b"
+  borderColorUrgent = "#ff5555"
   # Bar settings
   barHeight = 20
   barBackgroundColor = "#282a36"
