Added a binding to jump to the first urgent window.

--- a/config.default.toml
+++ b/config.default.toml
@@ -125,3 +125,7 @@ exec = [
   keys = [ "space" ]
   modifiers = [ "super" ]
 
+  [controls.jumpToUrgentWindow]
+  keys = [ "u" ]
+  modifiers = [ "super" ]
+
