Working on appRule parsing.
Parsing is written, needs to be tested.

--- a/config.default.toml
+++ b/config.default.toml
@@ -1,5 +1,10 @@
-# Start external programs
+[[appRule]]
+class = "Element"
+instance = "element"
+monitor = 2
+tags = [ 1 ]
 
+# Start external programs
 [[startProcess]]
 command = "pkill nimdow"
 keys = [ "Delete" ]
