Extracting functionality out of configloader.
Need to write tests.

--- a/config.default.toml
+++ b/config.default.toml
@@ -142,3 +142,17 @@ exec = [
   keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
   modifiers = [ "super", "shift", "control" ]
 
+[monitors]
+  [monitors.default]
+  # TODO: have `all` for the tags table.
+  tags.all.numMasterWindows = 2
+
+  tags.1.displayString = "one"
+  tags.2.displayString = "foobar"
+
+  [monitors.1.tags]
+  2.displayString = "two"
+
+  [monitors.2.tags]
+  2.displayString = "too"
+
