--- a/config.default.toml
+++ b/config.default.toml
@@ -143,6 +143,14 @@ exec = [
   keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
   modifiers = [ "super", "shift", "control" ]
 
+	[controls.incWidthDiff]
+	keys = [ "l" ]
+	modifiers = [ "super" ]
+
+	[controls.decWidthDiff]
+	keys = [ "h" ]
+	modifiers = [ "super" ]
+
 # Example monitor settings:
 # [monitors]
   # [monitors.default.tags]
