--- a/config.default.toml
+++ b/config.default.toml
@@ -38,7 +38,6 @@ exec = [
 
 [settings]
   # Window settings
-  gapSize = 12
   borderWidth = 1
   borderColorUnfocused = "#282a36"
   borderColorFocused = "#50fa7b"
@@ -54,6 +53,9 @@ exec = [
     "monospace:size=10:antialias=true",
     "NotoColorEmoji:size=10:antialias=true"
   ]
+	# Layout settings
+  gapSize = 12
+	resizeStep = 10
   # General settings
   loggingEnabled = false
 
