--- a/config.default.toml
+++ b/config.default.toml
@@ -145,11 +145,11 @@ exec = [
   keys = [ "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
   modifiers = [ "super", "shift", "control" ]
 
-	[controls.incWidthDiff]
+	[controls.increaseMasterWidth]
 	keys = [ "l" ]
 	modifiers = [ "super" ]
 
-	[controls.decWidthDiff]
+	[controls.decreaseMasterWidth]
 	keys = [ "h" ]
 	modifiers = [ "super" ]
 
