Updated default config.

--- a/config.default.toml
+++ b/config.default.toml
@@ -29,18 +29,10 @@ command = "st"
 keys = [ "Return" ]
 modifiers = [ "super" ]
 
-# Start process when region is clicked, see documentation for what constitutes a region
-[[startProcess]]
-command = "notify-send \"Id: %1, rx: %2, cx: %4, w: %6\""
-clickRegion = 0
-
-[[startProcess]]
-command = "notify-send \"Id: %1, rx: %2, cx: %4, w: %6\""
-clickRegion = 1
-
-[[startProcess]]
-command = "notify-send \"Id: %1, rx: %2, cx: %4, w: %6\""
-clickRegion = 2
+# Example: Start process when region is clicked, see github wiki for what constitutes a region
+# [[startProcess]]
+# command = "notify-send \"Id: %1, rx: %2, cx: %4, w: %6\""
+# clickRegion = 0
 
 [autostart]
 exec = [
