--- a/config.default.toml
+++ b/config.default.toml
@@ -61,6 +61,9 @@ exec = [
   # Layout settings
   gapSize = 12
   resizeStep = 10
+  # Scratchpad settings
+  scratchpadWidth = 800
+  scratchpadHeight = 600
   # General settings
   loggingEnabled = false
   reverseTagScrolling = false
