--- a/config.default.toml
+++ b/config.default.toml
@@ -201,6 +201,7 @@ exec = [
   # 2.displayString = "foobar"
   # Set the number of master windows for ALL monitors.
   # all.numMasterWindows = 2
+  # all.defaultMasterWidthPercentage = 60
 
   # [monitors.1.tags]
   # 2.displayString = "two"
