Fixed default hex color code.

--- a/config.default.toml
+++ b/config.default.toml
@@ -54,7 +54,7 @@ exec = [
   barForegroundColor = "#f8f8f2"
   barSelectionColor = "#50fa7b"
   barUrgentColor = "#ff5555"
-  barHasWindowsColor = "#f5eodc"
+  barHasWindowsColor = "#f5e0dc"
   barShowIndicator = false
   barTransparency = 255 # 0 to 255
   barFonts = [
